--- a/TME3/.gitignore
+++ b/TME3/.gitignore
@@ -8,3 +8,9 @@
 /StringPosition.class
 /Main$1.class
 /Main.class
+/Case.class
+/PatriciaTrie.class
+/PatriciaTrieTest.class
+/Node.class
+/Edge.class
+/RadixTree.class
